@@ -2,13 +2,12 @@ package gui;
 
 import gui.controllers.View;
 import gui.controllers.ViewSwitcher;
+
 import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.scene.image.Image;
 import javafx.scene.layout.Pane;
 import javafx.stage.Stage;
-import logic.GlobalConfig;
-import logic.PlayerConfig;
 
 import java.io.IOException;
 
@@ -16,18 +15,21 @@ import java.io.IOException;
 /**
  * main gui entry point
  * also creates the logic/player instances
+ * <p>
+ * to use javafx, add jvm args
+ * --module-path lib/lib --add-modules javafx.controls,javafx.fxml,javafx.media
  */
 public class GUIMain extends Application  {
     public static void main(String[] args) {
         launch(args);
     }
 
-    private Scene scene;
     private static final String ICON_PATH = "file:src/gui/img/Icon.png";
 
     @Override
     public void start(Stage stage) throws IOException {
-        scene = new Scene(new Pane());
+        ViewSwitcher.setStage(stage);
+        Scene scene = new Scene(new Pane());
         //Load Scene
         ViewSwitcher.setScene(scene);
         ViewSwitcher.switchTo(View.Menu);
@@ -40,8 +42,10 @@ public class GUIMain extends Application  {
         stage.getIcons().add(icon);
         stage.setTitle("Battleship");
 
-        stage.setResizable(false);
-        //stage.setFullScreen(true);
+        //stage Property's
+
+        stage.setMinWidth(1280);
+        stage.setMinHeight(760);
 
         //Start application
         stage.show();
